--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "node server.js",
-    "local-start":"npm run start",
+    "local-start": "npm run start",
     "build": "node build/build.js",
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "express": "^4.16.3",
+    "mongodb": "^3.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
