--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongodb": "^3.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
