--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "boom": "^7.2.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.1",
