--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "boom": "^7.2.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "leaflet": "^1.3.3",
     "mongodb": "^3.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
