--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "leaflet": "^1.3.3",
     "leaflet-easybutton": "^2.3.0",
+    "leaflet-maskcanvas": "^1.0.0",
     "mongodb": "^3.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
